# localsandbox

./: .env.example  .env.test  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  E2ETEST.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SKILL.md  WARP.md  e2e_context.json  install-lsb-cli.sh  install.sh  pyproject.toml  setup.py  test_architecture_compliance_shutdown.py  test_installation.py  test_mcp_shutdown_fix.py
.agent/rules/: no-proxy.md
.github/workflows/: release-cli.yml
.kiro/specs/docker-container-sandbox/: design.md  requirements.md  tasks.md
.kiro/specs/e2e-integration-test/: design.md  requirements.md  tasks.md
.kiro/specs/pin-sandbox-feature/: design.md  requirements.md  tasks.md
cli/: go.mod  main.go
data/: test_file.txt
docs/: ARCHITECTURE_IMPROVEMENTS.md  CONFIG_FIXES_SUMMARY.md  ENV_VARIABLES_ANALYSIS.md  GETTING_START.md  MCP_DOCKER_FIX_SUMMARY.md  MCP_SHUTDOWN_FIX_SUMMARY.md  PARAMETER_REFACTOR_SUMMARY.md  USAGE.md  USER_GUIDE.md
mcp-server/: .env.dev  .env.docker  requirements.txt  setup.py  start_mcp_docker.sh  test_container_naming.py
mcp-server/docs/: BACKGROUND_TASK_MANAGEMENT.md  CONFIGURATION_GUIDE.md  ERROR_HANDLING.md  LRU_EVICTION_GUIDE.md
mcp-server/mcp_server/: cli.py  main.py  scripts.py  server.py
mcp-server/microsandbox_wrapper/: config.py  exceptions.py  models.py  resource_manager.py  session_manager.py  wrapper.py
mcp-server/server/: __init__.py  api.py  cli.py  cli_client.py  main.py  scripts.py  server.py
mcp-server/wrapper/: __init__.py  config.py  exceptions.py  logging_config.py  models.py  resource_manager.py  session_manager.py  wrapper.py
python/: .env.example  README.md  pyproject.toml  setup.py
python/sandbox/: __init__.py  base_sandbox.py  command.py  command_execution.py  config.py  container_runtime.py  execution.py  metrics.py  node_sandbox.py  python_sandbox.py
skills/use-sandbox/: SKILL.md
tests/: CODE_REFACTORING_SUMMARY.md  E2ETEST.md  INTEGRATION_TEST_SUMMARY.md  MCP_INTEGRATION_SUMMARY.md  PINNED_CONTAINER_PRESERVATION_FINAL_SUMMARY.md  PINNED_LABEL_FIX_SUMMARY.md  PIN_SANDBOX_E2E_SUMMARY.md  PIN_SANDBOX_FINAL_TEST_SUMMARY.md  PIN_SANDBOX_TEST_FINAL_SUMMARY.md  README.md  README_pin_sandbox_e2e.md  conftest.py  mcp_client_test.py  pytest.ini  run_all_tests.py  run_pin_sandbox_e2e.py  run_tests.py  test_architecture_compliance.py  test_attach_container_state.py  test_attach_sandbox_by_name_functionality.py  test_cleanup_logic_modifications.py  test_cli_e2e.py  test_command_execution.py  test_config_pin_sandbox.py  test_container_runtime.py  test_docker_runtime_extensions.py  test_e2e.py  test_installation.py  test_mcp_end_to_end.py  test_mcp_integration.py  test_mcp_session_manager_simulation.py  test_pin_container_state.py  test_pin_sandbox_e2e_simple.py  test_pin_sandbox_end_to_end.py  test_pin_sandbox_functionality.py  test_pin_sandbox_integration.py  test_pin_sandbox_simple_fixed.py  test_pin_sandbox_single_session.py  test_pin_simple.py  test_pinned_check.py  (+4 more)
