[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "localsandbox-mcp-server"
version = "1.0.0"
description = "LocalSandbox MCP Server - A Model Context Protocol server for code execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LocalSandbox Team", email = "support@localsandbox.io"}
]
keywords = ["mcp", "model-context-protocol", "localsandbox", "sandbox", "http-server", "code-execution", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Emulators",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/localsandbox/localsandbox"
Repository = "https://github.com/localsandbox/localsandbox"
Documentation = "https://github.com/localsandbox/localsandbox/tree/main/docs"
"Bug Reports" = "https://github.com/localsandbox/localsandbox/issues"

[project.scripts]
microsandbox-mcp-server = "mcp_server.main:main"
mcp-server = "mcp_server.main:main"
start-localsandbox = "mcp_server.scripts:start_docker_server"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["mcp-server", "python"]
include = ["mcp_server*", "wrapper*", "sandbox*"]

[tool.setuptools.package-dir]
mcp_server = "mcp-server/mcp_server"
wrapper = "mcp-server/wrapper"
sandbox = "python/sandbox"

[tool.setuptools.package-data]
mcp_server = ["*.md", "*.txt", "*.yml", "*.yaml"]
wrapper = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]