[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "localsandbox-mcp-server"
version = "1.0.0"
description = "LocalSandbox MCP Server - A Model Context Protocol server for code execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LocalSandbox Team", email = "support@localsandbox.io"}
]
keywords = ["mcp", "model-context-protocol", "localsandbox", "sandbox", "http-server", "code-execution", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Emulators",
]
dependencies = [
    "mcp==1.23.3",
    "fastmcp==2.14.0",
    "uvicorn>=0.24.0",
    "starlette>=0.37.0",
    "aiohttp>=3.8.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "build",
    "twine",
    "pyinstaller>=5.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/localsandbox/localsandbox"
Repository = "https://github.com/localsandbox/localsandbox"
Documentation = "https://github.com/localsandbox/localsandbox/tree/main/docs"
"Bug Reports" = "https://github.com/localsandbox/localsandbox/issues"

[project.scripts]
lsb = "server.cli:main"
lsb-cli = "server.cli_client:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["mcp-server", "python"]
include = ["server*", "wrapper*", "sandbox*"]

[tool.setuptools.package-dir]
server = "mcp-server/server"
wrapper = "mcp-server/wrapper"
sandbox = "python/sandbox"

[tool.setuptools.package-data]
server = ["*.md", "*.txt", "*.yml", "*.yaml", "*.sh", ".env.*"]
wrapper = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(message)s"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
